# DecisionTree

./: .gitignore  CMakeLists.txt  README.md
data/: Raisin_source_data.data  Raisin_test.data  Raisin_train.data  iris_test.data  iris_train.data  wdbc_test.data  wdbc_train.data  wine_test.data  wine_train.data
src/: ai.hpp  ai2.hpp  ai3.hpp  ai_Amelie.hpp  iris.cpp  iris.h  main.cpp  raisin.cpp  raisin.h  wdbc.cpp  wdbc.h  wine.cpp  wine.h
